--- a/gmall-realtime/pom.xml
+++ b/gmall-realtime/pom.xml
@@ -132,6 +132,12 @@
             <version>1.9.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.ververica</groupId>
+            <artifactId>flink-connector-mysql-cdc</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
